Fix: Editing mobile degree icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ import MobileDegree from '@/sections/MobileDegree.astro';
 		<MobileVariety></MobileVariety>
 		<Delivery></Delivery>
 		<ContactForm></ContactForm>
-		<OurMission></OurMission>
+		<!-- <OurMission></OurMission>
 		<Slider lazyLoading={true}></Slider>
-		<Footer></Footer>
+		<Footer></Footer> -->
 	</main>
 </Layout>
