--- a/src/sections/ContactForm.astro
+++ b/src/sections/ContactForm.astro
@@ -14,7 +14,7 @@ import { europePhoneProfixes } from "@/lib/phonePrefix";
                     soluciones personalizadas para su negocio.</p>
             </div>
         </span>
-        <span class="grid place-items-center text-white text-3xl font-bold">
+        <span class="flex flex-col justify-center items-center text-white text-3xl font-bold">
             <form id="contactForm" class="flex flex-col items-start justify-around w-full h-full gap-4">
                 <span class="flex flex-row gap-4 justify-between w-full">
                     <input name="name" type="text" placeholder="Nombre*" class="w-full text-sm p-2 outline-none border border-neutral-300 rounded-lg bg-transparent">
