--- a/src/sections/Delivery.astro
+++ b/src/sections/Delivery.astro
@@ -5,6 +5,6 @@ import Truck from "@/icons/Truck.astro";
 <section class="flex flex-row justify-center">
     <span class="md:w-2/3 flex flex-row items-center justify-center gap-2">
         <p class="text-primary font-semibold text-xl md:text-3xl">Ofrecemos envios nacionales de 24h y envios internacionales de 48h</p>
-        <Truck class="text-primary size-48"></Truck>
+        <Truck class="text-primary size-36 md:size-48"></Truck>
     </span>
 </section>
