--- a/src/icons/Mobile.astro
+++ b/src/icons/Mobile.astro
@@ -5,13 +5,11 @@
     viewBox="0 0 24 24"
     fill="none"
     stroke="currentColor"
-    stroke-width="1"
+    stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     class={Astro.props.class}
     ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-        d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path><path
-        d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path><path
-        d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5"
-    ></path></svg
+        d="M6 5a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-8a2 2 0 0 1 -2 -2v-14z"
+    ></path><path d="M11 4h2"></path><path d="M12 17v.01"></path></svg
 >
